# amr-bench-mini

./: .gitignore  README.md  pyproject.toml
data/: README.md  ast.json  metadata.json
data/tasks/: dbreconcile.jsonl  mechreason.jsonl  mechreason_hard.jsonl  mechreason_pilot.jsonl  mechreason_strict.jsonl
outputs/: agent_trial_step3.md  agent_trial_step4.md  mechreason_trial.md  provenance.json  task_bundles.json
outputs/amrfinder/: 573.12972.tsv  573.13082.tsv  573.13107.tsv  573.13217.tsv  573.13227.tsv  573.13370.tsv  573.13406.tsv  573.13472.tsv  (+52 more)
paper/: README.md  icml2026.sty  paper.bbl  paper.tex  refs.bib
results/: hard_split_taxonomy.md  headline_table.json  headline_table.md  manual_audit.tsv  mechreason_hard_summary.json  mechreason_hard_summary.md  rule_baseline_summary.json  rule_baseline_summary.md  tool_vs_baseline_gemini_hard.md
scripts/: apply_audit_overrides.py  audit_mechreason_labels.py  backfill_costs.py  build_hard_subset.py  build_headline_table.py  build_pilot_subset.py  build_tasks.py  capture_annotator_provenance.py  compare_tool_vs_baseline.py  make_manual_audit.py  pull_fasta.py  pull_isolates.py  refresh_split_golds.py  rescore_runs.py  run_annotators.sh  run_anthropic_batch_eval.py  run_baselines.py  run_gemini_batch_eval.py  run_llm_eval.py  scale_isolates.py
tests/: test_agent.py  test_mechreason.py  test_parsing.py  test_schema.py  test_scoring.py
working-notes/: README.md  amr-mechbench-idea.md  genbio-amr-bench-execution-plan.md  genbio-amr-bench-paper-draft.md  genbio-litreview.md  icml-2026-workshops.md  spike-results.md
(+1595 files in other folders)
